Avoid improper optimization of case statements mixed integer/rational/complex

Fixes [Bug #17857]